# lukasGPT

./: .gitignore  AGENTS.md  Makefile  README.md  checkpoint_io.py  checkpoints.json  download_checkpoints.py  export_onnx.py  gpt.py  pyproject.toml  viz_embeddings.py
.github/workflows/: pages.yml  pyright.yml
datasets/: __init__.py  base.py  gutenberg.py  shakespeare.py  tinystories.py
tokenizers/: __init__.py  base.py  bpe.py  char.py
web/: index.html  main.js  vocab.json
