[project]
name = "ng-video-lecture"
version = "0.1.0"
description = "Code from Karpathy's Neural Networks: Zero to Hero nanoGPT lecture."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5",
    "pydantic>=2.0",
    "plotly>=6.7.0",
    "numpy>=2.4.4",
    "streamlit>=1.57.0",
]
