[project]
name = "ng-video-lecture"
version = "0.1.0"
description = "Code from Karpathy's Neural Networks: Zero to Hero nanoGPT lecture."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5",
    "pydantic>=2.0",
    "plotly>=6.7.0",
    "numpy>=2.4.4",
    "streamlit>=1.57.0",
    "huggingface-hub>=1.14.0",
    "tensorboard>=2.20.0",
    "onnx>=1.21.0",
]

[dependency-groups]
dev = [
    "onnxruntime>=1.26.0",
    "pyright>=1.1.409",
]

[tool.pyright]
include = ["gpt.py", "datasets", "viz_embeddings.py", "download_checkpoints.py", "checkpoint_io.py", "export_onnx.py"]
exclude = ["bigram.py", ".venv", "**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
# torch's stubs declare lots of public functions (`torch.tensor`, `torch.cat`,
# `torch.zeros`, ...) without an explicit re-export, which pyright treats as
# private. Silence the noise rather than peppering the code with `from torch
# import tensor`.
reportPrivateImportUsage = false
reportUnknownVariableType = "warning"
